# What42s-Rust-Theme-Light

./: .gitignore  CHANGELOG.md  DELEVOPING.md  LICENSE  README.md  package.json  src color-theme.json  src dark-color-theme.json  src light-color-theme.json  vsc-extension-quickstart.md
builder/: Cargo.toml  build_extension.js  build_themes.js  utils.js
builder/src/: data.rs  main.rs  utils.rs
node_scripts/: build_extension.js
src/: base color-theme.json
src/scripts/: build_extension.js  build_themes.js  utils.js
themes/: What42's Rust Theme (Light)-color-theme.json  What42's Theme-color-theme.json  extentions.json  old.json
