[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = {version = "1.0.190", features = ["serde_derive"]}
deser-hjson = "2.2.1"
serde_json = "1.0.108"
fs_extra = "1.3.0"
